@@ -730,6 +730,16 @@ gconf_server_load_sources(void)
 
   /* -- End of Debug Only */
 #endif
+
+  if (addresses == NULL)
+    {
+      /* Try using the default address xml:$(HOME)/.gconf */
+      addresses = g_new0(gchar*, 2);
+
+      addresses[0] = g_strconcat("xml:", g_get_home_dir(), "/.gconf", NULL);
+
+      addresses[1] = NULL;
+    }
   
   if (addresses == NULL)
     {
