@@ -1,5 +1,10 @@
 1999-11-22  Havoc Pennington  <hp@pobox.com>
 
+	* gconf/gconfd.c (gconf_server_load_sources): Fall back to
+	xml:~/.gconf if no config file is found
+
+1999-11-22  Havoc Pennington  <hp@pobox.com>
+
         * gconf/default.path: default configuration file
 	
 	* gconf/Makefile.am (install-data-local): Install default.path to
